# stormweaver

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENSE  README.md  conanfile.py  index.html  mkdocs.yml
.github/: CODEOWNERS
.github/workflows/: build-and-test.yml  build-matrix.yml  formatting.yml  merge-gatekeeper.yml  mkdocs.yml
adr-enhanced-statistics/: index.html
adr-existing-database-support/: index.html
building/: index.html
cmake/: LuaModules.cmake  PQCPack.cmake  PQFindRevision.cmake  PQSetupCompiler.cmake
code-architecture/: index.html
config/: stormweaver.toml
config-parameters/: index.html
docs/: adr-enhanced-statistics.md  adr-existing-database-support.md  building.md  config-parameters.md  extensibility-workflow.md  index.md  lua-cpp-reference.md  randomized-testing-concepts.md  scripting-architecture.md  scripting-examples.md
extensibility-workflow/: index.html
libstormweaver/: CMakeLists.txt
libstormweaver/include/: bitflags.hpp  checksum.hpp  metadata.hpp  metadata_populator.hpp  random.hpp  schema_discovery.hpp  statistics.hpp  workload.hpp
libstormweaver/include/action/: action.hpp  action_registry.hpp  all.hpp  composite.hpp  ddl.hpp  dml.hpp  helper.hpp
libstormweaver/include/process/: postgres.hpp  process.hpp
libstormweaver/include/scripting/: luactx.hpp
libstormweaver/include/sql_variant/: generic.hpp
libstormweaver/src/: CMakeLists.txt  checksum.cpp  metadata.cpp  metadata_populator.cpp  schema_discovery.cpp  statistics.cpp  workload.cpp
libstormweaver/src/action/: action_registry.cpp  ddl.cpp  dml.cpp  helper.cpp
libstormweaver/src/process/: postgres.cpp  process.cpp
libstormweaver/src/scripting/: luactx.cpp
libstormweaver/src/sql_variant/: generic.cpp  mysql.cpp  postgresql.cpp  sql_variant.cpp
libstormweaver/test/sql/: CMakeLists.txt  README.md  checksum.cpp  ddl.cpp  main.cpp  metadata_populator.cpp  schema_discovery.cpp  sql.hpp  worker_schema_discovery.cpp
libstormweaver/test/unit/: CMakeLists.txt  main.cpp  metadata_test.cpp  statistics_test.cpp
lua-cpp-reference/: index.html
randomized-testing-concepts/: index.html
scenarios/: basic.lua  pg1468-simplified.lua  pg1468.lua
scenarios/ci/: basic.lua  incremental.lua  pitr.lua
scripting-architecture/: index.html
scripting-examples/: index.html
scripts/: PgConf.lua  PgManager.lua  argparser.lua  common.lua  entropy.lua  pg_simple.lua  tde_helper.lua
search/: search_index.json
stormweaver/src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  background.lua  metadata_validation.lua  simple-pg.lua
